--- a/SammyJs/index.html
+++ b/SammyJs/index.html
@@ -15,6 +15,8 @@
       <a href="#/rivetjs">Rivet JS Demo</a>
       -
       <a href="#/riotjs">Riot JS Demo</a>
+      -
+      <a href="#/vue">Vue JS Demo</a>
 
   </nav>
   <!-- Mount point for Sammy-->
