JQuery-UI Dialog added

--- a/SammyJs/RivetJS/index.html
+++ b/SammyJs/RivetJS/index.html
@@ -15,6 +15,11 @@
     <input rv-value="data.b" rv-on-input='data.refresh'/>
 	  <br/>
     Var c = ( {data.a} + {data.b} ) : {data.c}
+
+		<div id="dialog" title="JQuery-ui dialog from Rivet!">
+	    <p>This is the default dialog created on Rivet app. The dialog window can moved, resized and closed with the 'x' icon.</p>
+	  </div>
+
 	</div>
 <!-- Add script here, at the end of body, after "changeme" component is created or app.js will not find it! -->
 <script type="text/javascript" src="./RivetJS/app.js"></script>
