--- a/SammyJs/index.html
+++ b/SammyJs/index.html
@@ -3,6 +3,8 @@
 <meta charset="utf-8" />
 <body>
   <script src="jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" href="jquery-ui.min.css">
+  <script src="jquery-ui.min.js"></script>
   <script src="sammy-latest.min.js"></script>
   <h1>Sammy</h1>
   <nav>
